Hive Change Log

Trunk -  Unreleased

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HIVE-964. Handle skew join
    (Yongqiang He via namit)

    HIVE-972. Support views. (John Sichi via zshao)

  IMPROVEMENTS

    HIVE-983. Function from_unixtime takes long.
    (Ning Zhang via zshao)

    HIVE-990. Incorporate CheckStyle into Hive's build.xml.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 1.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 2 - serde.
    (Carl Steinbach via zshao)

    HIVE-1081. Automated source code cleanup - Part 3 - ql.
    (Carl Steinbach via zshao)

    HIVE-1084. Capitalize first letter of class names.
    (Carl Steinbach via zshao)

    HIVE-1112. Replace instances of StringBuffer and Vector with StringBuilder
    and ArrayList. (Carl Steinbach via zshao)

    HIVE-1105. Add service script for starting metastore server.
    (John Sichi via zshao)

    HIVE-1109. Structured temporary directories
    (Zheng Shao via Ning Zhang)

    HIVE-1068. CREATE VIEW followup: add a 'table type' enum attribute in
    metastore's MTable. (John Sichi via zshao)

    HIVE-1104. Suppress Checkstyle warnings for generated files.
    (Carl Steinbach via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-1047. Merge tasks in GenMRUnion1
    (Ning Zhang via namit)

    HIVE-1048. Make output of TestParse determinisitc
    (Paul Yang via namit)

    HIVE-1045. (bigint % int) should return bigint instead of double.
    (Paul Yang via zshao)

    HIVE-1046. Pass build.dir.hive and other properties to subant
    (Zheng Shao via namit)

    HIVE-1066. Fix test outputs serde_typedbytes*.q
    (Zheng Shao via namit)

    HIVE-1064. Null Pointer Exception in Hive CLI in distributed mode
    (Carl Steinbach via Ning Zhang)

    HIVE-1075. Make it possible for users to recover data when moveTask fails
    (Zheng Shao via Ning Zhang)
